[tool.poetry]
name = "echo_service"
version = "0.1.0"
description = ""
authors = ["codemask <mattode@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
pre-commit = "^2.20.0"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
redis = "^4.3.4"
gunicorn = "^20.1.0"
requests = "^2.28.1"
httpx = "^0.23.0"
trio = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
